how it works styling

--- a/src/sass/base/_colors.scss
+++ b/src/sass/base/_colors.scss
@@ -4,9 +4,11 @@
     --tertiary-color: #99E2D0;
     --text-color: hsl(0, 0%, 100%);
 
-    --bg-color-dark: #cfcfcfb9;
-    --bg-color-light: #e4e4e4;
+    --bg-color-dark: #e3e3e3ba;
+    --bg-color-light: #f7f7f7;
     --bg-footer-color: #3b3b3b;
 
     --box-shadow: hsl(0, 0%, 17%);
+
+    --icon-dark: rgb(85, 85, 85);
 }
