--- a/src/sass/util/_mixins.scss
+++ b/src/sass/util/_mixins.scss
@@ -8,6 +8,11 @@
     align-items: center;
 }
 
-@mixin box-shadow-btn ($color: var(--bg-color-dark)){
+@mixin box-shadow-btn ($color: var(--bg-color-light)){
     box-shadow: 0px 5px 8px $color;
+}
+
+@mixin section-headline {
+    font-weight: var(--font-weight-bold);
+    font-size: 1.8rem;
 }
