--- a/public/css/pages/index.css
+++ b/public/css/pages/index.css
@@ -1,3 +1,9 @@
+:root {
+  --font-weight-light: 300;
+  --font-weight-medium: 600;
+  --font-weight-bold: 800;
+}
+
 .rst-page-main-image {
   margin: auto;
 }
@@ -11,4 +17,45 @@
   max-width: 1000px;
   position: relative;
   z-index: 9;
+}
+
+.menu__head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1em;
+}
+.menu__head--icon {
+  font-size: 2em;
+}
+
+.menu-container {
+  margin-top: 2em;
+}
+.menu-container__headline {
+  margin-left: 1em;
+  text-transform: uppercase;
+}
+.menu-container__headline:before {
+  position: absolute;
+  content: "";
+  width: 40px;
+  height: 25px;
+  border-bottom: 2px solid var(--tertiary-color);
+}
+
+.order-btn {
+  background-image: linear-gradient(to top left, var(--primary-color), var(--secondary-color));
+  margin: 2em auto;
+  text-align: center;
+  width: 150px;
+  padding: 10px 40px;
+  color: #fff;
+  box-shadow: 0 2px 10px;
+  border-radius: 35px;
+  box-shadow: 0px 5px 8px var(--box-shadow-light);
+}
+.order-btn:hover {
+  box-shadow: 0px 5px 8px rgb(177, 177, 177);
+  filter: brightness(110%);
 }
