--- a/src/sass/pages/_restaurantnro.scss
+++ b/src/sass/pages/_restaurantnro.scss
@@ -1,3 +1,6 @@
+@use '../util/mixins' as m;
+@use '../util/variables' as v;
+
 .rst-page-main-image {
     margin: auto;
 }
@@ -13,3 +16,44 @@
     z-index: 9;    
 }
 
+.menu__head {
+display: flex;
+justify-content: space-between;
+align-items: center;
+margin: 1em;
+    &--icon {
+        font-size: 2em;
+    }
+}
+
+.menu-container {
+    margin-top: 2em;
+        &__headline {
+            margin-left: 1em;
+            text-transform: uppercase;
+            &:before{
+            position: absolute;
+            content: "";
+            width: 40px;
+            height: 25px;
+            border-bottom: 2px solid var(--tertiary-color);
+            }
+    }
+}
+
+.order-btn {
+    background-image: linear-gradient(to top left, var(--primary-color), var(--secondary-color));
+    margin: 2em auto;
+    text-align: center;
+    width: 150px;
+    padding: 10px 40px;
+    color: #fff;
+    box-shadow: 0 2px 10px ;
+    border-radius: 35px;
+    @include m.box-shadow-btn(var(--box-shadow-light));
+
+        &:hover {
+            @include m.box-shadow-btn(rgb(177, 177, 177));
+            filter: brightness(110%);
+        }
+}
