--- a/src/sass/pages/_restaurantnro.scss
+++ b/src/sass/pages/_restaurantnro.scss
@@ -14,6 +14,16 @@
     max-width: 1000px;
     position: relative;
     z-index: 9;    
+    animation: change-color-anim 0.7s linear;
+}
+
+@keyframes change-color-anim {
+	0%{
+		background-color: #ffff;
+	}
+	100%{
+		background-color: var(--bg-color-light);
+	}
 }
 
 .menu__head {
