--- a/public/css/pages/index.css
+++ b/public/css/pages/index.css
@@ -8,6 +8,14 @@
   margin: auto;
 }
 
+.home-arrow .fa-arrow-left {
+  position: absolute;
+  top: 20px;
+  margin-left: 20px;
+  font-size: 1.8em;
+  color: black;
+}
+
 .menu-page {
   background-color: var(--bg-color-light);
   border-radius: 25px;
